# scripts_python

./: obtener.py  pyproject.toml
expenses/: chat.txt  chat_whatsapp.xlsx  obtener_chat_whashapp.py
expenses/data/: PTT-20240823-WA0045.opus  PTT-20241001-WA0003.opus  PTT-20241112-WA0051.opus  PTT-20241231-WA0006.opus  PTT-20250128-WA0006.opus  WhatsApp Chat with Gastos .txt
expenses_read_whatsaap/: chat_whatsapp.xlsx  obtener_chat_whashapp.py
